@@ -1,9 +1,5 @@
 Still to do
 - documentation
-- cursor updates
-- procedure return value with a row producing procedure
-- procedure byref parameters
-- Unicode
 - Add/Show/Delete Ingres Name server entries
 - BIG int / int8 support
   - not possible with PHP as yet since it does not support 8 byte int
